style.css
/* Default css */

:root {
  /* styles for input-group::after for js modification*/
  --display: none;
  --shield: url(images/shield-x.svg);
  --border: 2px solid gray;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  overflow: hidden;
}

::selection {
  background-color: #16c7a1;
}

/* outer part design */

.container {
  min-height: 100vh;
  background-color: #f6f8f9;
  position: relative;
}

.main {
  height: 800px;
  width: 500px;
  margin: 0 auto;
  padding: 20px 50px;
  background-color: #ffffff;
  background-image: url(images/bg.png);
  background-repeat: no-repeat;
  background-position: bottom center;
  background-size: 100%;
  box-shadow: 0px 1px 10px 5px rgba(0, 0, 0, 0.1);
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

/* Logo, title & description */

.logo-img {
  display: block;
  width: 20%;
  margin: 50px auto;
}

.title {
  font-size: 18px;
  font-weight: 500;
  text-align: center;
  color: #004e55;
}

.muted {
  width: 60%;
  margin: 0 auto;
  font-size: 16px;
  text-align: center;
  color: #a4bcc3;
}

/* Input field and validation icon */

.input-group {
  display: flex;
  justify-content: center;
  margin: 10px;
  position: relative;
}

.input-group::after {
  display: var(--display);
  content: "";
  width: 35px;
  height: 35px;
  margin-right: 2px;
  background-image: var(--shield);
  background-repeat: no-repeat;
  background-position: center;
  background-color: white;
  border-top: var(--border);
  border-bottom: var(--border);
  border-right: var(--border);
  position: absolute;
  top: 0px;
  right: 73px;
}

.input {
  width: 70%;
  height: 35px;
  padding: 10px;
  font-size: 16px;
  text-align: center;
  color: #004e55;
  border: 2px solid gray;
  line-height: 0px;
  position: relative;
}

.input-img {
  height: 35px;
  margin-left: -2px;
  padding: 7px;
  border: 2px solid gray;
  cursor: pointer;
}

/* Eight characters text */
.eight {
  display: none;
  margin: 0 auto;
  font-size: 14px;
  text-align: center;
  color: red;
}

/* Bars for password strength */
.bars {
  padding: 10px 15%;
  text-align: center;
}

.bar {
  width: 0%;
  height: 4px;
}

.char {
  margin-top: 10px;
}

/* Conditions for lowercase, uppercase, number & symbol */

.conditions {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  margin-top: 10px;
  padding: 0px 80px;
  font-size: 14px;
  color: #a4bcc3;
}

.condition-group {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  width: 50%;
}

.condition-img {
  margin-top: 5px;
}

/* Custom Selection */

.muted::selection,
.condition-text::selection {
  color: #004e55;
}

.logo-img::selection,
.input-img::selection,
.condition-img::selection {
  background-color: transparent;
}

/* for desktop: under 1400px */
@media only screen and (max-width: 1400px) {
  .main {
    height: 530px;
    width: 350px;
    padding: 20px;
    background-size: 80%;
  }

  .logo-img {
    margin: 20px auto;
  }

  .muted {
    width: 80%;
  }

  .input {
    width: 80%;
  }

  .conditions {
    padding: 0 50px;
  }

  .input-group::after {
    right: 46px;
  }
}

